--- a/burger_menu.css
+++ b/burger_menu.css
@@ -1,4 +1,3 @@
-
 .toggler {
     position: absolute;
     top: .5rem;
@@ -75,12 +74,13 @@
     top: 0;
     left: 0;
     width: 50%;
-    height: 110%;
+    height: 100%;
     transition: .3s;
     visibility: hidden;
     z-index: 2;
 }
 .menu > div {
+    display: grid;
     position: absolute;
     width: 50%;
     height: 100%;
@@ -89,15 +89,17 @@
     transform: translateX(-50%) translateY(-50%);
     background-color: rgba(0, 0, 0, .5);
     transition: .5s;
-    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
 .menu div div {
+    display: flex;
     max-width: 50%;
     max-height: 100%;
-    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     opacity: 0;
 }
 .menu div div ul li {
@@ -112,8 +114,9 @@
     color: #fff;
     text-transform: uppercase;
     transition: .3s;
+    align-items: center;
     justify-content: center;
-    transform: translateX(75px);
+    transform: translateX(120px);
 }
 .menu div div ul li a:hover {
     color: rgb(230, 139, 53)
