--- a/style.css
+++ b/style.css
@@ -106,6 +106,10 @@ video {
     opacity: 0.6;
     pointer-events: none;
 }
+.menu_video {
+    opacity: 1;
+    z-index: -5;
+}
 
 
 /*--------text Box---------*/
