--- a/burger_menu.css
+++ b/burger_menu.css
@@ -111,7 +111,7 @@
     display: inline-block;
     font-size: 1.2rem;
     font-weight: 550;
-    color: #fff;
+    color: #000;
     text-transform: uppercase;
     transition: .3s;
     align-items: center;
