--- a/style.css
+++ b/style.css
@@ -141,7 +141,8 @@ video {
     
     .textBox {
         width: 250px;
-        margin: 1rem;
+        margin: .5rem;
+        padding: .5rem;
     }
     .textBox h2 {
         font-size: 1.5rem;
