--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ video {
         width: 250px;
         margin: .5rem;
         padding: .5rem;
+        background: rgba(0, 0, 0, .0);
     }
     .textBox h2 {
         font-size: 1.5rem;
